@@ -1,0 +1,23 @@
+# The build.properties is read from the build.xml. Please change some variables
+# only here!
+
+# the location of the OpenJUMP core SVN
+# we need this for build the classpath during compile/run and for the default-plugins.xml file
+# You do not need to modify the location here. You can assign the openjump.svn
+# property on ant commandline:
+# ant -Dopenjump.svn=your_very_special_openjump_SVN_path run
+openjump.svn=../openjump_svn
+
+# Main class to run
+run.mainclass=com.vividsolutions.jump.workbench.JUMPWorkbench
+
+# OpenJUMP arguments
+# -properties: during developement we start the plugin via the workbench-properties.xml file
+# -default-plugins: the location of the default-plugins.xml file; we use the regular OJ file here
+# -state: workbench-state.xml should not written into the project directory (the default); we use the system t(e)mp
+run.arguments=-properties workbench-properties.xml -default-plugins ${openjump.svn}/scripts/default-plugins.xml -state ${java.io.tmpdir}/
+
+# Arguments for the JVM
+# -Xmx: the maximum heap size
+# -Dlog.dir: openjump.log should not written into the project directory (the default); we use the system t(e)mp
+run.arguments.jvm=-Xmx256m -Dlog.dir=${java.io.tmpdir}/
