@@ -10,8 +10,8 @@ PrintPlugIn.Line-width-percent = Linienbreite in Prozent
 PrintPlugIn.Line-width-tooltip = 0 - 300
 PrintPlugIn.PDF-page-tooltip = mm
 PrintPlugIn.Print-border = Seitenr\u00e4nder drucken
-PrintPlugIn.Print-options = Print Options
-PrintPlugIn.Printer-not-found = Es w\u00fcrde kein Drucker gefunden
+PrintPlugIn.Print-options = Druck Einstellungen
+PrintPlugIn.Printer-not-found = Es wurde kein Drucker gefunden
 PrintPlugIn.Resolution-multiplier = Doppelte Bild Aufl\u00f6sung
 PrintPlugIn.Expand-to-fit = Auf Seitenh\u00f6he erweitern
 PrintPlugIn.Print-area-in-fence = Inhalt des Rahmens drucken
