@@ -1,0 +1,3 @@
+<workbench>
+    <extension>com.isa.jump.plugin.PrintExtension</extension>
+</workbench>
